test/snapshot/check/sema/undefined_variable.vole.snap
[stdout]

[stderr]
error[E2002]: undefined variable 'undefined_var'
  --> <path>/undefined_variable.vole:2:13
  |
2 |     println(undefined_var)
  |             ^^^^^^^^^^^^^
